--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "@ionic/angular/css/normalize.css";
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
-@import '@ionic/angular/css/display.css';
+@import "@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
@@ -24,3 +24,26 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+:root {
+  --ion-font-family: 'Montserrat' !important;
+}
+
+.perfil-img-header {
+  border-radius: 50%;
+  height: 75px;
+  width: 75px;
+}
+
+.spotifort-title {
+  display: grid;
+  justify-content: center;
+}
+
+.margin-top-10 {
+  margin-top: 10px;
+}
+
+.fit-modal-wrapper {
+	--height: fit-content;
+}
