--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,99 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title class="display-grid ion-justify-content-center"> Spotifort - Página Inicial </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-card *ngIf="loginService.accessToken">
+    <ion-card-header>
+      <ion-item lines="none" class="ion-margin-bottom ion-no-padding">
+        <ion-grid>
+          <ion-row>
+            <ion-col class="col-fit-content">
+              <img class="square-75 round" src="{{ perfilService.perfil?.images[0]?.url }}" />
+            </ion-col>
+            <ion-col class="display-grid ion-align-items-center">
+              <ion-title>Olá, {{ perfilService.perfil?.display_name }}.</ion-title>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item lines="none" class="ion-margin-bottom">
+        <ion-label slot="start">SUAS PLAYLISTS</ion-label>
+        <ion-buttons slot="end">
+          <ion-button class="margin-end" color="success" shape="round" fill="solid" (click)="openNewPlaylistModal()">
+            <ion-icon slot="start" name="add-outline"></ion-icon>
+            <ion-label>Criar Playlist</ion-label>
+          </ion-button>
+          <ion-button color="danger" shape="round" fill="solid" (click)="openDeletePlaylistsModal()">
+            <ion-icon slot="start" name="trash-outline"></ion-icon>
+            <ion-label>Apagar Playlists</ion-label>
+          </ion-button>
+        </ion-buttons>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-grid class="playlist-grid">
+          <ion-row
+            *ngFor="let playlistChunk of perfilService.perfil?.playlists?.owned"
+            class="ion-margin-bottom ion-margin-top">
+            <ion-col
+              *ngFor="let playlist of playlistChunk"
+              size="1"
+              (click)="goToPlaylist(playlist.id)"
+              class="display-grid ion-justify-content-center">
+              <ion-item lines="none" class="display-grid ion-justify-content-center">
+                <img class="square-150" src="{{ playlist.images[0]?.url }}" />
+              </ion-item>
+              <ion-item lines="none" class="display-grid ion-justify-content-center contain-cover">
+                <ion-label class="ion-text-center" text-wrap>{{ playlist.name }}</ion-label>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item lines="none" class="ion-margin-bottom">
+        <ion-label slot="start">PLAYLISTS CURTIDAS</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-grid class="playlist-grid">
+          <ion-row
+            *ngFor="let playlistChunk of perfilService.perfil?.playlists?.liked"
+            class="ion-margin-bottom ion-margin-top">
+            <ion-col
+              *ngFor="let playlist of playlistChunk"
+              size="1"
+              (click)="goToPlaylist(playlist.id)"
+              class="display-grid ion-justify-content-center">
+              <ion-item lines="none" class="display-grid ion-justify-content-center">
+                <img class="square-150" src="{{ playlist.images[0]?.url }}" />
+              </ion-item>
+              <ion-item lines="none" class="display-grid ion-justify-content-center contain-cover">
+                <ion-label class="ion-text-center" text-wrap>{{ playlist.name }}</ion-label>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+  <ion-card *ngIf="!loginService.accessToken">
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-label class="ion-text-center" text-wrap>
+          Utilize o botão abaixo para fazer login utilizando uma conta Spotify
+        </ion-label>
+      </ion-item>
+      <ion-item lines="none" class="display-grid ion-justify-content-center">
+        <ion-buttons>
+          <ion-button shape="round" color="success" fill="solid" href="/login">
+            <ion-icon name="person-outline" slot="start"></ion-icon>
+            <ion-label>Login</ion-label>
+          </ion-button>
+        </ion-buttons>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
