--- a/src/app/components/add-artist/add-artist.component.html
+++ b/src/app/components/add-artist/add-artist.component.html
@@ -8,7 +8,17 @@
     </ion-toolbar>
     <ion-toolbar class="selected-artist-toolbar">
       <ion-item lines="none">
-        <ion-grid>
+        <ion-grid *ngIf="fsService.platform == 'mobile'">
+          <ion-row *ngFor="let artistChunk of selectedArtistsMobile; let i = index">
+            <ion-col *ngFor="let chosenArtist of artistChunk; let j = index" class="col-fit-content">
+              <div class="display-flex" (click)="removeArtist(i, j, chosenArtist)">
+                <img class="round square-50" src="{{ chosenArtist.images[0].url }}">
+                <ion-icon class="remove-artist-fab" name="remove-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        <ion-grid *ngIf="fsService.platform == 'desktop'">
           <ion-row *ngFor="let artistChunk of selectedArtists; let i = index">
             <ion-col *ngFor="let chosenArtist of artistChunk; let j = index" class="col-fit-content">
               <div class="display-flex" (click)="removeArtist(i, j, chosenArtist)">
@@ -28,7 +38,7 @@
           <ion-col class="display-grid align-content-center col-fit-content">
             <img class="round square-50" src="{{ artist?.images[0]?.url }}">
           </ion-col>
-          <ion-col>
+          <ion-col class="display-grid align-content-center">
             <ion-label>{{ artist.name }}</ion-label>
           </ion-col>
         </ion-row>
@@ -50,12 +60,20 @@
         <ion-label text-wrap>Artistas Selecionados</ion-label>
       </ion-item>
       <ion-item lines="none">
-        <ion-grid>
+        <ion-grid *ngIf="fsService.platform == 'mobile'">
           <ion-row *ngFor="let artistChunk of selectedArtists; let i = index">
             <ion-col *ngFor="let chosenArtist of artistChunk; let j = index" class="col-fit-content">
-              <div class="display-flex" (click)="removeArtist(i, j, chosenArtist)">
+              <div class="display-flex">
                 <img class="round square-50" src="{{ chosenArtist.images[0].url }}">
-                <ion-icon class="remove-artist-fab" name="remove-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        <ion-grid *ngIf="fsService.platform == 'desktop'">
+          <ion-row *ngFor="let artistChunk of selectedArtists; let i = index">
+            <ion-col *ngFor="let chosenArtist of artistChunk; let j = index" class="col-fit-content">
+              <div class="display-flex">
+                <img class="round square-50" src="{{ chosenArtist.images[0].url }}">
               </div>
             </ion-col>
           </ion-row>
@@ -68,25 +86,39 @@
       <ion-label text-wrap>Selecione os critérios para adicionar músicas à playlist:</ion-label>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox [(ngModel)]="qty20" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">Top 20</ion-checkbox>
+      <ion-checkbox [(ngModel)]="qty20" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Top 20</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox [(ngModel)]="qty50" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">Top 50</ion-checkbox>
+      <ion-checkbox [(ngModel)]="qty50" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Top 50</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox [(ngModel)]="qty100" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">Top 100</ion-checkbox>
+      <ion-checkbox [(ngModel)]="qty100" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Top 100</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox [(ngModel)]="qtyAll" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">Todas</ion-checkbox>
+      <ion-checkbox [(ngModel)]="qtyAll" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Todas</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox [(ngModel)]="qtyAlbum" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">Escolher Álbuns</ion-checkbox>
+      <ion-checkbox [(ngModel)]="qtyAlbum" (ionChange)="qtyChange($event)" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Escolher Álbuns</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox (ionChange)="showSwal($event)" [(ngModel)]="noLive" justify="start" labelPlacement="end">Excluir músicas ao vivo</ion-checkbox>
+      <ion-checkbox (ionChange)="showSwal($event)" [(ngModel)]="noLive" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Excluir músicas ao vivo</ion-label>
+      </ion-checkbox>
     </ion-item>
     <ion-item lines="none">
-      <ion-checkbox (ionChange)="showSwal($event)" [(ngModel)]="noRemix" justify="start" labelPlacement="end">Excluir remix/versões alternativas</ion-checkbox>
+      <ion-checkbox (ionChange)="showSwal($event)" [(ngModel)]="noRemix" justify="start" labelPlacement="end">
+        <ion-label text-wrap>Excluir remix/versões alternativas</ion-label>
+      </ion-checkbox>
     </ion-item>
   </ion-card-content>
 </ion-card>
@@ -98,19 +130,11 @@
       </ion-item>
     </ion-card-header>
     <ion-card-content>
-      <ion-item lines="none">
-        <ion-grid>
-          <ion-row *ngFor="let album of artist.albums">
-            <ion-col class="col-fit-content display-grid align-content-center">
-              <img class="round square-50" src="{{ album[0].images[0].url }}" />
-            </ion-col>
-            <ion-col class="display-grid align-content-center">
-              <ion-item lines="none">
-                <ion-checkbox (ionChange)="markAlbum($event, album[0])" labelPlacement="start">{{ album[0].name }}</ion-checkbox>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+      <ion-item lines="none" *ngFor="let album of artist.albums" class="margin-bottom">
+        <ion-checkbox (ionChange)="markAlbum($event, album[0])" labelPlacement="start">
+          <div class="checkbox-img-div"><img src="{{ album[0].images[0]?.url }}" /></div>
+          <div class="checkbox-label-div">{{ album[0]?.name }}</div>
+        </ion-checkbox>
       </ion-item>
     </ion-card-content>
   </ion-card>
