--- a/src/app/components/progress-indicator/progress-indicator.component.html
+++ b/src/app/components/progress-indicator/progress-indicator.component.html
@@ -1,7 +1,7 @@
 <ion-card *ngIf="!loading">
   <ion-card-header class="display-grid">
     <ion-spinner name="crescent" class="ion-margin-vertical justify-self-center"></ion-spinner>
-    <ion-title class="ion-margin-vertical ion-text-center">{{ message }}</ion-title>
+    <ion-label class="title-mobile ion-margin-vertical ion-text-center" text-wrap>{{ message }}</ion-label>
     <ion-progress-bar *ngIf="showProgress" class="ion-margin-vertical" [value]="progress"></ion-progress-bar>
   </ion-card-header>
 </ion-card>
