--- a/src/global.scss
+++ b/src/global.scss
@@ -25,16 +25,22 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+/** custom font **/
+@font-face {
+  font-family: Montserrat;
+  src: url("./assets/fonts/Montserrat.ttf");
+}
+
 /** root properties **/
 :root {
   --ion-font-family: "Montserrat" !important;
 
   ion-title {
-    color: var(--ion-color-primary-contrast)
+    color: var(--ion-color-primary-contrast);
   }
 
   ion-label {
-    color: var(--ion-color-primary-contrast)
+    color: var(--ion-color-primary-contrast);
   }
 }
 
@@ -42,7 +48,6 @@
 .fit-modal-wrapper {
   --height: fit-content;
 }
-
 
 /** display utils **/
 .display-grid {
@@ -120,7 +125,6 @@
   padding-bottom: 0px !important;
 }
 
-
 /** align and justify utils **/
 .align-content-center {
   align-content: center;
@@ -170,7 +174,7 @@
 /** for scrollable cards **/
 .scrollable-card {
   max-height: 50vh;
-  overflow: scroll
+  overflow: scroll;
 }
 
 /** for fab div **/
