--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,52 @@
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row class="ion-justify-content-center">
+          <ion-col class="col-fit-content">
+            <div class="square-50">
+              <img src="../../assets/icon/favicon.png" />
+            </div>
+          </ion-col>
+          <ion-col class="display-grid align-content-center col-fit-content">
+            <ion-label class="title-mobile">Fortify</ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item lines="none" button (click)="navigate('/home')">
+        <ion-icon slot="start" name="home-outline"></ion-icon>
+        <ion-label>Página Inicial</ion-label>
+      </ion-item>
+      <!-- TODO: Adicionar!
+      <ion-item lines="none">
+        <ion-icon slot="start" name="earth-outline"></ion-icon>
+        <ion-label>Navegar</ion-label>
+      </ion-item> -->
+      <ion-item lines="none" button (click)="logout()">
+        <ion-icon slot="start" name="log-out-outline"></ion-icon>
+        <ion-label>Sair</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<div class="ion-page" id="main-content">
 <ion-header>
   <ion-toolbar>
-    <ion-title [ngClass]="{'ion-hide': fsService.platform != 'desktop'}" class="display-grid ion-justify-content-center"> Spotifort - Página Inicial </ion-title>
-    <ion-title [ngClass]="{'ion-hide': fsService.platform != 'mobile'}" class="display-grid ion-justify-content-center"> Spotifort</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title [ngClass]="{'ion-hide': fsService.platform != 'desktop'}" class="display-grid ion-justify-content-center">Fortify - Página Inicial </ion-title>
+    <ion-title [ngClass]="{'ion-hide': fsService.platform != 'mobile'}" class="display-grid ion-justify-content-center">Fortify</ion-title>
+    <ion-buttons slot="end">
+      <ion-button shape="round">
+        <ion-icon name="" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -79,7 +124,7 @@
       </ion-item>
       <ion-item lines="none" class="display-grid ion-justify-content-center">
         <ion-buttons>
-          <ion-button shape="round" color="success" fill="solid" (click)="redirectLogin()">
+          <ion-button shape="round" color="success" fill="solid" (click)="login()">
             <ion-icon name="person-outline" slot="start"></ion-icon>
             <ion-label>Login</ion-label>
           </ion-button>
@@ -88,6 +133,7 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+
 <ion-content [ngClass]="{'ion-hide': fsService.platform != 'desktop'}">
   <ion-card *ngIf="loginService.accessToken">
     <ion-card-header>
@@ -172,7 +218,7 @@
       </ion-item>
       <ion-item lines="none" class="display-grid ion-justify-content-center">
         <ion-buttons>
-          <ion-button shape="round" color="success" fill="solid" (click)="redirectLogin()">
+          <ion-button shape="round" color="success" fill="solid" (click)="login()">
             <ion-icon name="person-outline" slot="start"></ion-icon>
             <ion-label>Login</ion-label>
           </ion-button>
@@ -181,3 +227,4 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+</div>
