little fix in duplicates and remove item lines

--- a/src/app/components/new-playlist/new-playlist.component.html
+++ b/src/app/components/new-playlist/new-playlist.component.html
@@ -60,14 +60,14 @@
       <ion-col class="full-width display-block">
         <ion-row class="ion-margin-bottom">
           <div class="height-50 full-width">
-            <ion-item>
+            <ion-item lines="none">
               <ion-input [(ngModel)]="title" label="Nome da Playlist" label-placement="stacked"></ion-input>
             </ion-item>
           </div>
         </ion-row>
         <ion-row>
           <div class="height-150 full-width">
-            <ion-item>
+            <ion-item lines="none">
               <ion-textarea
                 [(ngModel)]="description"
                 [autoGrow]="true"
